fix: whitespace for scrollable terminals

--- a/sphinx_terminal/_static/terminal.css
+++ b/sphinx_terminal/_static/terminal.css
@@ -67,6 +67,10 @@ div.terminal-code {
     width: max-content;
   }
 
+  .input .literal {
+    white-space: pre;
+  }
+
   .terminal-code {
     width: max-content;
   }
